[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jkit"
version = "0.1.0"
description = "Jake's recon/pentest toolkit"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9",
    "dnspython>=2.6",
    "impacket>=0.12",
    "rich>=13.0",
]

[project.scripts]
cloud-enum    = "cloud_enum_ng:main"
emailscanner  = "emailscanner:main"
klist2ccache  = "klist2ccache:main"
klistremote   = "klistremote:main"
subdtakeover  = "subdomaintakeover:main"

[tool.setuptools]
py-modules = [
    "cloud_enum_ng",
    "emailscanner",
    "klist2ccache",
    "klistremote",
    "subdomaintakeover",
]
