[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jkit"
version = "0.1.0"
description = "Jake's recon/pentest toolkit"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9",
    "dnspython>=2.6",
    "impacket>=0.12",
    "rich>=13.0",
    "badsecrets>=0.6",
]

[project.scripts]
cloud-enum       = "external.cloud_enum_ng:main"
emailscanner     = "external.emailscanner:main"
subdtakeover     = "external.subdomaintakeover:main"
wcf-meta         = "external.wcf_meta_check:main"
klist2ccache     = "internal.klist2ccache:main"
klistremote      = "internal.klistremote:main"
viewstate-check  = "internal.viewstate_check:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["external*", "internal*"]
